src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImTextureRef_t ImTextureRef;
typedef unsigned int ImU32;        
typedef unsigned long long ImU64;  
typedef struct ImDrawCmd_t ImDrawCmd;                                
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImDrawListSplitter_t ImDrawListSplitter;              
typedef struct ImFont_t ImFont;                                      
typedef int ImDrawFlags;            
struct ImVec4_t
{
    float x, y, z, w;
};
typedef ImU64 ImTextureID;  
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
#define IM_COL32_WHITE       IM_COL32(255,255,255,255)   
typedef void (*ImDrawCallback)(const ImDrawList* parent_list, const ImDrawCmd* cmd);
#define ImDrawCallback_ResetRenderState     (ImDrawCallback)(-8)
struct ImDrawCmd_t
{
    ImVec4         ClipRect;                
    ImTextureRef   TexRef;                  
    unsigned int   VtxOffset;               
    unsigned int   IdxOffset;               
    unsigned int   ElemCount;               
    ImDrawCallback UserCallback;            
    void*          UserCallbackData;        
    int            UserCallbackDataSize;    
    int            UserCallbackDataOffset;  
};
struct ImDrawListSplitter_t
{
    int                    _Current;   
    int                    _Count;     
    ImVector_ImDrawChannel _Channels;  
};
struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;          
    ImVector_ImDrawIdx    IdxBuffer;          
    ImVector_ImDrawVert   VtxBuffer;          
    ImDrawListFlags       Flags;              
    unsigned int          _VtxCurrentIdx;     
    ImDrawListSharedData* _Data;              
    ImDrawVert*           _VtxWritePtr;       
    ImDrawIdx*            _IdxWritePtr;       
    ImVector_ImVec2       _Path;              
    ImDrawCmdHeader       _CmdHeader;         
    ImDrawListSplitter    _Splitter;          
    ImVector_ImVec4       _ClipRectStack;     
    ImVector_ImTextureRef _TextureStack;      
    ImVector_ImU8         _CallbacksDataBuf;  
    float                 _FringeScale;       
    const char*           _OwnerName;         
};
CIMGUI_API void        ImDrawList_AddTextEx(ImDrawList* self, ImVec2 pos, ImU32 col, const char* text_begin, const char* text_end );
CIMGUI_API void        ImDrawList_AddTextImFontPtr(ImDrawList* self, ImFont* font, float font_size, ImVec2 pos, ImU32 col, const char* text_begin);        
CIMGUI_API void        ImDrawList_AddTextImFontPtrEx(ImDrawList* self, ImFont* font, float font_size, ImVec2 pos, ImU32 col, const char* text_begin, const char* text_end , float wrap_width , const ImVec4* cpu_fine_clip_rect );
CIMGUI_API void        ImDrawList_AddBezierCubic(ImDrawList* self, ImVec2 p1, ImVec2 p2, ImVec2 p3, ImVec2 p4, ImU32 col, float thickness, int num_segments ); 
CIMGUI_API void        ImDrawList_AddBezierQuadratic(ImDrawList* self, ImVec2 p1, ImVec2 p2, ImVec2 p3, ImU32 col, float thickness, int num_segments ); 
CIMGUI_API void        ImDrawList_AddPolyline(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col, ImDrawFlags flags, float thickness);
CIMGUI_API void        ImDrawList_AddConvexPolyFilled(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col);
CIMGUI_API void        ImDrawList_AddConcavePolyFilled(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col);
CIMGUI_API void        ImDrawList_AddImage(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p_min, ImVec2 p_max);                                            
CIMGUI_API void        ImDrawList_AddImageEx(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p_min, ImVec2 p_max, ImVec2 uv_min , ImVec2 uv_max , ImU32 col );
CIMGUI_API void        ImDrawList_AddImageQuad(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p1, ImVec2 p2, ImVec2 p3, ImVec2 p4);                        
CIMGUI_API void        ImDrawList_AddImageQuadEx(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p1, ImVec2 p2, ImVec2 p3, ImVec2 p4, ImVec2 uv1 , ImVec2 uv2 , ImVec2 uv3 , ImVec2 uv4 , ImU32 col );
CIMGUI_API void        ImDrawList_AddImageRounded(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p_min, ImVec2 p_max, ImVec2 uv_min, ImVec2 uv_max, ImU32 col, float rounding, ImDrawFlags flags );
CIMGUI_API void        ImDrawList_PathClear(ImDrawList* self);
CIMGUI_API void        ImDrawList_PathLineTo(ImDrawList* self, ImVec2 pos);
CIMGUI_API void        ImDrawList_PathLineToMergeDuplicate(ImDrawList* self, ImVec2 pos);
CIMGUI_API void        ImDrawList_PathFillConvex(ImDrawList* self, ImU32 col);
CIMGUI_API void        ImDrawList_PathFillConcave(ImDrawList* self, ImU32 col);
CIMGUI_API void        ImDrawList_PathStroke(ImDrawList* self, ImU32 col, ImDrawFlags flags , float thickness );
CIMGUI_API void        ImDrawList_PathArcTo(ImDrawList* self, ImVec2 center, float radius, float a_min, float a_max, int num_segments );
CIMGUI_API void        ImDrawList_PathArcToFast(ImDrawList* self, ImVec2 center, float radius, int a_min_of_12, int a_max_of_12);                          
CIMGUI_API void        ImDrawList_PathEllipticalArcTo(ImDrawList* self, ImVec2 center, ImVec2 radius, float rot, float a_min, float a_max);                
CIMGUI_API void        ImDrawList_PathEllipticalArcToEx(ImDrawList* self, ImVec2 center, ImVec2 radius, float rot, float a_min, float a_max, int num_segments ); 
CIMGUI_API void        ImDrawList_PathBezierCubicCurveTo(ImDrawList* self, ImVec2 p2, ImVec2 p3, ImVec2 p4, int num_segments );                   
CIMGUI_API void        ImDrawList_PathBezierQuadraticCurveTo(ImDrawList* self, ImVec2 p2, ImVec2 p3, int num_segments );                          
CIMGUI_API void        ImDrawList_PathRect(ImDrawList* self, ImVec2 rect_min, ImVec2 rect_max, float rounding , ImDrawFlags flags );
CIMGUI_API void        ImDrawList_AddCallback(ImDrawList* self, ImDrawCallback callback, void* userdata);                                                  
CIMGUI_API void        ImDrawList_AddCallbackEx(ImDrawList* self, ImDrawCallback callback, void* userdata, size_t userdata_size );
CIMGUI_API void        ImDrawList_AddDrawCmd(ImDrawList* self);                                                                                            
CIMGUI_API ImDrawList* ImDrawList_CloneOutput(const ImDrawList* self);                                                                                     
CIMGUI_API void        ImDrawList_ChannelsSplit(ImDrawList* self, int count);
CIMGUI_API void        ImDrawList_ChannelsMerge(ImDrawList* self);
CIMGUI_API void        ImDrawList_ChannelsSetCurrent(ImDrawList* self, int n);
CIMGUI_API void        ImDrawList_PrimReserve(ImDrawList* self, int idx_count, int vtx_count);
struct ImFont_t
{
    ImFontBaked*             LastBaked;                                             
    ImFontAtlas*             OwnerAtlas;                                            
    ImFontFlags              Flags;                                                 
    float                    CurrentRasterizerDensity;                              
    ImGuiID                  FontId;                                                
    float                    LegacySize;                                            
    ImVector_ImFontConfigPtr Sources;                                               
    ImWchar                  EllipsisChar;                                          
    ImWchar                  FallbackChar;                                          
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  
    bool                     EllipsisAutoBake;                                      
    ImGuiStorage             RemapPairs;                                            
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 
#endif 
};