src/Sdl3Sharp.ImGui/Native/ImDrawList.cs


    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddTextEx")]
    public static partial void AddText(ImDrawList* self, ImVec2 pos, uint col, byte* text_begin, byte* text_end);

    /// <summary>
    /// Implied text_end = NULL, wrap_width = 0.0f, cpu_fine_clip_rect = NULL
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddTextImFontPtr")]
    public static partial void AddText(ImDrawList* self, ImFont* font, float font_size, ImVec2 pos, uint col, byte* text_begin);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddTextImFontPtrEx")]
    public static partial void AddText(ImDrawList* self, ImFont* font, float font_size, ImVec2 pos, uint col, byte* text_begin, byte* text_end, float wrap_width, ImVec4* cpu_fine_clip_rect);

    /// <summary>
    /// Cubic Bezier (4 control points)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddBezierCubic")]
    public static partial void AddBezierCubic(ImDrawList* self, ImVec2 p1, ImVec2 p2, ImVec2 p3, ImVec2 p4, uint col, float thickness, int num_segments);

    /// <summary>
    /// Quadratic Bezier (3 control points)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddBezierQuadratic")]
    public static partial void AddBezierQuadratic(ImDrawList* self, ImVec2 p1, ImVec2 p2, ImVec2 p3, uint col, float thickness, int num_segments);

    /// <summary>
    /// General polygon
    /// - Only simple polygons are supported by filling functions (no self-intersections, no holes).
    /// - Concave polygon fill is more expensive than convex one: it has O(N^2) complexity. Provided as a convenience for the user but not used by the main library.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddPolyline")]
    public static partial void AddPolyline(ImDrawList* self, ImVec2* points, int num_points, uint col, ImDrawFlags flags, float thickness);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddConvexPolyFilled")]
    public static partial void AddConvexPolyFilled(ImDrawList* self, ImVec2* points, int num_points, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddConcavePolyFilled")]
    public static partial void AddConcavePolyFilled(ImDrawList* self, ImVec2* points, int num_points, uint col);

    /// <summary>
    /// Image primitives
    /// - Read FAQ to understand what ImTextureID/ImTextureRef are.
    /// - "p_min" and "p_max" represent the upper-left and lower-right corners of the rectangle.
    /// - "uv_min" and "uv_max" represent the normalized texture coordinates to use for those corners. Using (0,0)-&gt;(1,1) texture coordinates will generally display the entire texture.
    /// Implied uv_min = ImVec2(0, 0), uv_max = ImVec2(1, 1), col = IM_COL32_WHITE
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddImage")]
    public static partial void AddImage(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p_min, ImVec2 p_max);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddImageEx")]
    public static partial void AddImage(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p_min, ImVec2 p_max, ImVec2 uv_min, ImVec2 uv_max, uint col);

    /// <summary>
    /// Implied uv1 = ImVec2(0, 0), uv2 = ImVec2(1, 0), uv3 = ImVec2(1, 1), uv4 = ImVec2(0, 1), col = IM_COL32_WHITE
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddImageQuad")]
    public static partial void AddImageQuad(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p1, ImVec2 p2, ImVec2 p3, ImVec2 p4);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddImageQuadEx")]
    public static partial void AddImageQuad(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p1, ImVec2 p2, ImVec2 p3, ImVec2 p4, ImVec2 uv1, ImVec2 uv2, ImVec2 uv3, ImVec2 uv4, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddImageRounded")]
    public static partial void AddImageRounded(ImDrawList* self, ImTextureRef tex_ref, ImVec2 p_min, ImVec2 p_max, ImVec2 uv_min, ImVec2 uv_max, uint col, float rounding, ImDrawFlags flags);

    /// <summary>
    /// Stateful path API, add points then finish with PathFillConvex() or PathStroke()
    /// - Important: filled shapes must always use clockwise winding order! The anti-aliasing fringe depends on it. Counter-clockwise shapes will have "inward" anti-aliasing.
    /// so e.g. 'PathArcTo(center, radius, PI * -0.5f, PI)' is ok, whereas 'PathArcTo(center, radius, PI, PI * -0.5f)' won't have correct anti-aliasing when followed by PathFillConvex().
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathClear")]
    public static partial void PathClear(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathLineTo")]
    public static partial void PathLineTo(ImDrawList* self, ImVec2 pos);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathLineToMergeDuplicate")]
    public static partial void PathLineToMergeDuplicate(ImDrawList* self, ImVec2 pos);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathFillConvex")]
    public static partial void PathFillConvex(ImDrawList* self, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathFillConcave")]
    public static partial void PathFillConcave(ImDrawList* self, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathStroke")]
    public static partial void PathStroke(ImDrawList* self, uint col, ImDrawFlags flags, float thickness);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathArcTo")]
    public static partial void PathArcTo(ImDrawList* self, ImVec2 center, float radius, float a_min, float a_max, int num_segments);

    /// <summary>
    /// Use precomputed angles for a 12 steps circle
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathArcToFast")]
    public static partial void PathArcToFast(ImDrawList* self, ImVec2 center, float radius, int a_min_of_12, int a_max_of_12);

    /// <summary>
    /// Implied num_segments = 0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathEllipticalArcTo")]
    public static partial void PathEllipticalArcTo(ImDrawList* self, ImVec2 center, ImVec2 radius, float rot, float a_min, float a_max);

    /// <summary>
    /// Ellipse
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathEllipticalArcToEx")]
    public static partial void PathEllipticalArcTo(ImDrawList* self, ImVec2 center, ImVec2 radius, float rot, float a_min, float a_max, int num_segments);

    /// <summary>
    /// Cubic Bezier (4 control points)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathBezierCubicCurveTo")]
    public static partial void PathBezierCubicCurveTo(ImDrawList* self, ImVec2 p2, ImVec2 p3, ImVec2 p4, int num_segments);

    /// <summary>
    /// Quadratic Bezier (3 control points)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathBezierQuadraticCurveTo")]
    public static partial void PathBezierQuadraticCurveTo(ImDrawList* self, ImVec2 p2, ImVec2 p3, int num_segments);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PathRect")]
    public static partial void PathRect(ImDrawList* self, ImVec2 rect_min, ImVec2 rect_max, float rounding, ImDrawFlags flags);

    /// <summary>
    /// Advanced: Draw Callbacks
    /// - May be used to alter render state (change sampler, blending, current shader). May be used to emit custom rendering commands (difficult to do correctly, but possible).
    /// - Use special ImDrawCallback_ResetRenderState callback to instruct backend to reset its render state to the default.
    /// - Your rendering loop must check for 'UserCallback' in ImDrawCmd and call the function instead of rendering triangles. All standard backends are honoring this.
    /// - For some backends, the callback may access selected render-states exposed by the backend in a ImGui_ImplXXXX_RenderState structure pointed to by platform_io.Renderer_RenderState.
    /// - IMPORTANT: please be mindful of the different level of indirection between using size==0 (copying argument) and using size&gt;0 (copying pointed data into a buffer).
    /// - If userdata_size == 0: we copy/store the 'userdata' argument as-is. It will be available unmodified in ImDrawCmd::UserCallbackData during render.
    /// - If userdata_size &gt; 0,  we copy/store 'userdata_size' bytes pointed to by 'userdata'. We store them in a buffer stored inside the drawlist. ImDrawCmd::UserCallbackData will point inside that buffer so you have to retrieve data from there. Your callback may need to use ImDrawCmd::UserCallbackDataSize if you expect dynamically-sized data.
    /// - Support for userdata_size &gt; 0 was added in v1.91.4, October 2024. So earlier code always only allowed to copy/store a simple void*.
    /// Implied userdata_size = 0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddCallback")]
    public static partial void AddCallback(ImDrawList* self, delegate* unmanaged[Cdecl]<ImDrawList*, ImDrawCmd*, void> callback, void* userdata);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddCallbackEx")]
    public static partial void AddCallback(ImDrawList* self, delegate* unmanaged[Cdecl]<ImDrawList*, ImDrawCmd*, void> callback, void* userdata, nuint userdata_size);

    /// <summary>
    /// Advanced: Miscellaneous
    /// This is useful if you need to forcefully create a new draw call (to allow for dependent rendering / blending). Otherwise primitives are merged into the same draw-call as much as possible
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_AddDrawCmd")]
    public static partial void AddDrawCmd(ImDrawList* self);

    /// <summary>
    /// Create a clone of the CmdBuffer/IdxBuffer/VtxBuffer. For multi-threaded rendering, consider using `imgui_threaded_rendering` from https://github.com/ocornut/imgui_club instead.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_CloneOutput")]
    public static partial ImDrawList* CloneOutput(ImDrawList* self);

    /// <summary>
    /// Advanced: Channels
    /// - Use to split render into layers. By switching channels to can render out-of-order (e.g. submit FG primitives before BG primitives)
    /// - Use to minimize draw calls (e.g. if going back-and-forth between multiple clipping rectangles, prefer to append into separate channels then merge at the end)
    /// - This API shouldn't have been in ImDrawList in the first place!
    /// Prefer using your own persistent instance of ImDrawListSplitter as you can stack them.
    /// Using the ImDrawList::ChannelsXXXX you cannot stack a split over another.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_ChannelsSplit")]
    public static partial void ChannelsSplit(ImDrawList* self, int count);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_ChannelsMerge")]
    public static partial void ChannelsMerge(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_ChannelsSetCurrent")]
    public static partial void ChannelsSetCurrent(ImDrawList* self, int n);

    /// <summary>
    /// Advanced: Primitives allocations
    /// - We render triangles (three vertices)
    /// - All primitives needs to be reserved via PrimReserve() beforehand.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimReserve")]
    public static partial void PrimReserve(ImDrawList* self, int idx_count, int vtx_count);
